SERVER-31897 Fix exhaust queries in the shell

(cherry picked from commit 502a72fb94bf05d2b6a24d6d2975a9ef14a5abef)